@@ -1,3 +1,7 @@
+2011-01-26  Dan Osipov <dosipov@phillyburbs.com>
+
+	* Update ext_emconf.php following release of 1.2.0
+	
 2011-01-27  Lorenz Ulrich <lorenz.ulrich@visol.ch>
 
 	* Bug #8395: captionsplit does not work
